--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -79,8 +79,8 @@ body {
 
 .constellation {
   position: absolute;
-  width: 200px;
-  height: 200px;
+  width: 250px;
+  height: 250px;
   z-index: 4;
 }
 
@@ -106,6 +106,10 @@ table td {
 }
 
 .star {
+  position: absolute;
+}
+
+.constellation {
   position: absolute;
 }
 
